{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 111,
  "lineage": "6618b69e-ad14-3980-ba13-bd98a95c088a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-04c3f38d2c90474f6",
            "description": "Allow SSH inbound traffic from VPC",
            "filter": null,
            "id": "sg-04c3f38d2c90474f6",
            "name": "allow-ssh",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-ssh",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0042c053ab1e7a598"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:vpc/vpc-0042c053ab1e7a598",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bed7d96daaccfba3",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-8f56eaf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0042c053ab1e7a598",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a6184a63c45564d0",
            "owner_id": "411395035331",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-vpc",
              "Namespace": "useast1d"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb-linuxjump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/net/useast1d-nlb-linuxjump/07ab061c3dec1fd5",
            "arn_suffix": "net/useast1d-nlb-linuxjump/07ab061c3dec1fd5",
            "dns_name": "useast1d-nlb-linuxjump-07ab061c3dec1fd5.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/net/useast1d-nlb-linuxjump/07ab061c3dec1fd5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "useast1d-nlb-linuxjump",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051d934e40d2b293c"
              },
              {
                "subnet_id": "subnet-0665be9e48fab06d9"
              },
              {
                "subnet_id": "subnet-07b0e1eae13522a7c"
              }
            ],
            "subnets": [
              "subnet-051d934e40d2b293c",
              "subnet-0665be9e48fab06d9",
              "subnet-07b0e1eae13522a7c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-nlb-linuxjump",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0042c053ab1e7a598",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-linuxjump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:listener/net/useast1d-nlb-linuxjump/07ab061c3dec1fd5/83ed81454826a687",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-targetgroup-linuxjump/be4f245488e32466",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:listener/net/useast1d-nlb-linuxjump/07ab061c3dec1fd5/83ed81454826a687",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/net/useast1d-nlb-linuxjump/07ab061c3dec1fd5",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.nlb-linuxjump",
            "aws_lb_target_group.targetgroup-linuxjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup-linuxjump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-targetgroup-linuxjump/be4f245488e32466",
            "arn_suffix": "targetgroup/useast1d-targetgroup-linuxjump/be4f245488e32466",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-targetgroup-linuxjump/be4f245488e32466",
            "lambda_multi_value_headers_enabled": false,
            "name": "useast1d-targetgroup-linuxjump",
            "port": 22,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-targetgroup-linuxjump",
              "Namespace": "useast1d"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0042c053ab1e7a598"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-remote-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-05596297ba7ae4f31",
            "description": "Allow SSH inbound traffic from Home Office",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05596297ba7ae4f31",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.11.0.0/16"
                ],
                "description": "Allow SSH inbound traffic from Home Office",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-remote-ssh",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-remote-ssh",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042c053ab1e7a598"
          }
        }
      ]
    }
  ]
}